# neka-leds-go

./: .gitignore  LICENSE  coroutines.go  go.mod  main.go  readme.md
esp32-arduinoide/: esp32-32D-wifi.ino  esp32-32D.ino
src/esp32/: serial.go  wifi.go
src/screen/: color_process.go  geometry.go  harmonic.go  image_process.go  structs.go  utils.go
src/sdl_utils/: app.go  leds.go  menu.go  points.go  renderer.go  structs.go  utils.go
src/sdl_utils/widgets/button/: btn.go  color.go
src/sdl_utils/widgets/inputfield/: if.go
src/sdl_utils/widgets/slider/: slider.go
src/settings/: load.go  save.go  utils.go
src/utils/: colors.go  paths.go  structs.go  tools.go
src/win/: README.md  dxgi_capture.go  dxgi_test.go  structs.go  win_capture.go  win_events.go  win_monitor.go
src/win/dxgi/: CMakeLists.txt  README.md  dxgi_capture.cpp
